[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/farmingTilesheetComplete.png" type="Texture" id=1]
[ext_resource path="res://shop.gd" type="Script" id=2]
[ext_resource path="res://berry_seed.tscn" type="PackedScene" id=3]
[ext_resource path="res://shopmenu.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 174, 34, 29 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 11 )

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[node name="shop" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -1, 1 )
frames = SubResource( 2 )

[node name="shopart" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 6 )

[node name="shopmenu" parent="." instance=ExtResource( 4 )]
position = Vector2( -55, 10 )

[node name="berry_seed" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 26, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
